--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Not-Quite-Jigsaw Puzzles</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="http://localhost:8000/app.css">
   </head>
   <body>
     <div id="app"></div>
-
-    <script src="/vendor.js"></script>
-    <script src="/app.js"></script>
+    <script>
+      // Needed for electron
+      // https://github.com/brunch/brunch/issues/1208
+      window.nodeRequire = require;
+      delete window.require;
+      delete window.exports;
+      delete window.module;
+    </script>
+    <script src="http://localhost:8000/vendor.js"></script>
+    <script src="http://localhost:8000/app.js"></script>
     <script>require('index');</script>
   </body>
 </html>
