--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Not-Quite-Jigsaw Puzzles</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link rel="stylesheet" href="https://localhost:8000/app.css">
+    <link rel="stylesheet" href="/app.css">
   </head>
   <body>
     <div id="app"></div>
@@ -17,8 +17,8 @@
       delete window.exports;
       delete window.module;
     </script>
-    <script src="https://localhost:8000/vendor.js"></script>
-    <script src="https://localhost:8000/app.js"></script>
+    <script src="/vendor.js"></script>
+    <script src="/app.js"></script>
     <script>require('index');</script>
   </body>
 </html>
